# verbose-fishstick

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/verbose_fishstick/: __init__.py  calculator.py  cli.py  gui.py
tests/: __init__.py  test_calculator.py  test_cli.py  test_placeholder.py
verbose_fishstick/: __init__.py
