[project]
name = "verbose-fishstick"
version = "0.1.0"
description = "A minimal project configured with pyproject.toml"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=5.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
